my categories, my recipes pages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FooDelicious">
         <activity
+            android:name=".Activities.Activity_create_recipe"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.MyCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.MyRecipeActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.Activity_ingredient"
-            android:exported="false" />
-        <activity
-            android:name=".list_card"
-            android:exported="false" />
-        <activity
-            android:name=".nav_header"
             android:exported="false" />
         <activity
             android:name=".Activities.Activity_create_category"
