change to default categories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,10 @@
             android:name=".Activities.Activity_create_recipe"
             android:exported="false" />
         <activity
-            android:name=".Activities.MyCategoryActivity"
+            android:name=".Activities.MyAllRecipesActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.MyRecipeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Activities.Activity_ingredient"
             android:exported="false" />
         <activity
             android:name=".Activities.Activity_create_category"
